Fix Java 8 support